[package]
name = "protoscheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexbuffers = "2.0.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync", "net", "io-util", "rt"] }

[workspace]
members = ["proc-macros"]
